--- a/ProjectAllotmentPortal/AngularHUB/package.json
+++ b/ProjectAllotmentPortal/AngularHUB/package.json
@@ -23,13 +23,20 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@material/checkbox": "^4.0.0",
+    "@types/hammerjs": "^2.0.36",
     "canvasjs": "^1.8.3",
     "chart.js": "^2.9.3",
     "hammerjs": "^2.0.8",
+    "igniteui-angular": "^8.2.16",
+    "jszip": "^3.1.5",
+    "minireset.css": "~0.0.4",
+    "ngx-avatar": "^3.7.0",
     "ngx-toastr": "^11.2.1",
+    "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.4",
     "tslib": "^1.10.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -37,10 +44,11 @@
     "@angular/cli": "~8.3.21",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "igniteui-cli": "~4.3.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
