--- a/ProjectAllotmentPortal/AngularHUB/package.json
+++ b/ProjectAllotmentPortal/AngularHUB/package.json
@@ -31,6 +31,7 @@
     "igniteui-angular": "^8.2.16",
     "jszip": "^3.1.5",
     "minireset.css": "~0.0.4",
+    "moment-business-days": "^1.1.3",
     "ngx-avatar": "^3.7.0",
     "ngx-toastr": "^11.2.1",
     "resize-observer-polyfill": "^1.5.1",
